packages/webgl-media-editor/src/css/theme.css
.host {
  /* APP COLORS */
  color: var(--color-fnt-default);

  /* SCROLLBARS */
  scrollbar-color: var(--color-scrollbar-both);
  background-color: var(--color-bg-button);

  ::-webkit-scrollbar-thumb {
    background-color: var(--color-scrollbar-thumb);
  }

  ::-webkit-scrollbar-track {
    background: transparent;
  }

  /* PREVIEW */
  .miru--preview {
    background-color: var(--color-bg-preview);
  }

  /* MENU */
  .miru--menu {
    background-color: var(--color-bg-button);
  }

  /* BUTTON */
  .miru--button {
    color: var(--color-fnt-default);
    background-color: var(--color-bg-button);
  }

  /* BUTTON ACTIVE */
  .miru--button.miru--acc {
    background-color: var(--color-bg-acc);
    border-color: var(--color-fnt-acc);
  }

  /* BUTTON HOVER */
  .miru--button:not(.miru--acc, :has(canvas)):hover,
  .miru--hov:not(.miru--acc) {
    background-color: var(--color-bg-button-hover);
    border-color: transparent;
  }

  /* BUTTON ENABLED */
  .miru--button.miru--enabled::after {
    background-color: var(--color-fnt-acc);
  }

  /* SLIDER */
  .miru--slider {
    background-color: var(--color-slider-track);
    border-color: var(--color-bg-button); /* sets the background color of the area around the slider */
    &::-moz-range-thumb {
      background-color: var(--color-slider-thumb);
    }

    &::-moz-range-progress {
      background-color: var(--color-slider-progress);
    }
  }

  .miru--slider::-webkit-slider-thumb {
    /* seems like this does not like & nesting */
    background-color: var(--color-slider-thumb);
    box-shadow: -4000px 0 0 4000px var(--color-slider-progress);
  }

  /* CROPPER */
  .cropper-container {
    .cropper-view-box {
      outline-color: var(--color-crop-outline);
    }

    .cropper-dashed {
      border-color: var(--color-crop-dashed);
    }

    .cropper-drag-box {
      background-color: var(--color-crop-overlay);
    }
  }
}

